--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="body">
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkTQ8DFOgujidIRil33r2QnSZ2Y_ZHahrUlw&usqp=CAU" alt="">
         </div>
+        <button type="submit">SEND</button>
+        &copy;MeherajMuhammad 2021
     </div>
 </body>
 </html>
