--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkTQ8DFOgujidIRil33r2QnSZ2Y_ZHahrUlw&usqp=CAU" alt="">
         </div>
         <button type="submit">SEND</button>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora impedit earum doloremque ab sed quas minima libero et porro neque distinctio odit alias, eaque, officiis sapiente animi voluptatibus, repellat voluptate necessitatibus molestiae voluptates corporis quaerat unde quibusdam. Molestiae, perspiciatis voluptatum?</p>
         &copy;MeherajMuhammad 2021
     </div>
 </body>
