education of hsc

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         </div>
         <button type="submit">SEND</button>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora impedit earum doloremque ab sed quas minima libero et porro neque distinctio odit alias, eaque, officiis sapiente animi voluptatibus, repellat voluptate necessitatibus molestiae voluptates corporis quaerat unde quibusdam. Molestiae, perspiciatis voluptatum?</p>
+        <div class="education">
+            <h1>HSC</h1>
+            <p>higher secendary certifite</p>
+        </div>
         &copy;MeherajMuhammad 2021
     </div>
 </body>
